--- a/parkus-client/app/build.gradle
+++ b/parkus-client/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.android.support:design:26.1.0'
 }
