--- a/parkus-server/parkus-server/parkus-server.csproj
+++ b/parkus-server/parkus-server/parkus-server.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>ModelMain.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\ParkingPointItem.cs" />
+    <Compile Include="Models\Sha256Hashing.cs" />
     <Compile Include="ParkingPoints.cs">
       <DependentUpon>ModelMain.tt</DependentUpon>
     </Compile>
