--- a/parkus-client/app/src/main/AndroidManifest.xml
+++ b/parkus-client/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         <activity android:name=".activities.BeginActivity"></activity>
 
         <activity
-            android:name=".activities.MainMapActivity"
-            android:label="@string/title_activity_main_map">
+            android:name=".activities.MainMapActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
