--- a/parkus-client/app/src/main/AndroidManifest.xml
+++ b/parkus-client/app/src/main/AndroidManifest.xml
@@ -21,15 +21,16 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".activities.BeginActivity"></activity>
-
-        <activity
-            android:name=".activities.MainMapActivity">
+        <activity android:name=".activities.BeginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activities.MainMapActivity">
         </activity>
     </application>
 
