--- a/parkus-client/app/src/main/AndroidManifest.xml
+++ b/parkus-client/app/src/main/AndroidManifest.xml
@@ -31,7 +31,9 @@
         </activity>
         <activity android:name=".activities.MainMapActivity" />
         <activity android:name=".activities.AddNewParkingPointActivity" />
-        <activity android:name=".activities.LoginActivity"></activity>
+        <activity
+            android:name=".activities.LoginActivity"
+            android:theme="@style/StartTheme"/>
     </application>
 
 </manifest>
