Changed login activity and styles.

--- a/parkus-client/app/src/main/AndroidManifest.xml
+++ b/parkus-client/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         <activity android:name=".activities.AddNewParkingPointActivity" />
         <activity
             android:name=".activities.LoginActivity"
-            android:theme="@style/StartTheme"/>
+            android:theme="@style/LoginTheme"/>
     </application>
 
 </manifest>
