--- a/parkus-client/app/src/main/AndroidManifest.xml
+++ b/parkus-client/app/src/main/AndroidManifest.xml
@@ -41,7 +41,9 @@
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/LoginTheme" />
-        <activity android:name=".activities.RegisterActivity"></activity>
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:theme="@style/LoginTheme" />
     </application>
 
 </manifest>
