Increased max size of request (for images).

--- a/parkus-server/parkus-server/Web.config
+++ b/parkus-server/parkus-server/Web.config
@@ -11,7 +11,7 @@
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime maxRequestLength="2147483647" targetFramework="4.6.1" />
   </system.web>
   <system.webServer>
     <handlers>
@@ -21,6 +21,13 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <system.web.extensions>
+       <scripting>
+           <webServices>
+               <jsonSerialization maxJsonLength="86753090" />
+           </webServices>
+       </scripting>
+   </system.web.extensions>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
