--- a/parkus-server/parkus-server/parkus-server.csproj
+++ b/parkus-server/parkus-server/parkus-server.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ParkingPointsController.cs" />
+    <Compile Include="Controllers\PointsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
